crates/tests/libs/bindgen/data/error/delegate_opt_with_args/input.rdl

#[winrt]
mod Test {
    delegate fn Handler(#[opt(42)] value: i32);
}
        